--- a/_includes/css/projects.css
+++ b/_includes/css/projects.css
@@ -83,6 +83,7 @@ ul.projects a:hover {
   margin-top: 30px;
 }
 
-.bike {
+.bike,
+.toDoList {
   margin-bottom: 30px;
 }
